fixed vertical alignment review cards

--- a/css/style.css
+++ b/css/style.css
@@ -151,12 +151,15 @@ body {
     display: flex;
     align-items: center;
     padding: 1.2rem 0;
+    align-items: center;
+    padding: 0;
+    padding-top: 2rem;
   }
 
   .review-card {
     flex: 1;
     align-items: center;
-    margin: 2.1rem 0;
+    margin: 0;
     padding-bottom: 2.5rem;
     padding-left: 2rem;
     /*  
@@ -167,15 +170,17 @@ body {
     margin-right: 2rem;
   }
   .review-card:first-of-type {
-    margin-top: 0;
+    align-self: flex-start;
+    margin-bottom: 2rem;
   }
   .review-card:last-of-type {
-    margin-bottom: 0;
+    align-self: flex-end;
+    margin-top: 2rem;
   }
 
   .title-container {
     text-align: left;
-    padding-right: 10rem;
+    padding-right: 8.5rem;
   }
 
   .page-title {
